language/move-lang/tests/move_check/parser/module_use_after_func.exp
error: 

   ┌── tests/move_check/parsing/module_use_after_func.move:4:5 ───
   │
 4 │     use 0x1::X;
   │     ^^^ Unrecognized Token: use
   ·
 4 │     use 0x1::X;
   │     --- Expected:  "native", "public", "}", r#"[a-zA-Z_][a-zA-Z0-9_]*"#, r#"[a-zA-Z_][a-zA-Z0-9_]*<"#,
   │

