language/move-lang/tests/move_check/parser/module_use_after_func.move
module M {
    fun f() {}
    // Use declarations must come before function declarations.
    use 0x1::X;
}
